--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Evyatar Ifrach",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
